--- a/Challenge_#25_SPI/Makefile
+++ b/Challenge_#25_SPI/Makefile
@@ -1,7 +1,7 @@
 TOPLEVEL_LANG = verilog
-VERILOG_SOURCES = $(shell pwd)/spi_slave.v
-TOPLEVEL = spi_slave
-MODULE = test_spi
+VERILOG_SOURCES = $(shell pwd)/spi_slave3.v
+TOPLEVEL = spi_slave3
+MODULE = test_spi4
 SIM = icarus
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
